--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 				<div class="navbar-collapse collapse" id="main-menu">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item selected"><a href="#" class="nav-link">Open</a></li>
-						<li class="nav-item"><a href="edit.html" class="nav-link">Edit</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">About us</a></li>  
 					</ul>
 				</div>
@@ -46,7 +45,7 @@
 
 				<br>
 				<div class='buttons'>
-					<input type="text" id="filename" placeholder="Name of the file" class='filenameEntry'>
+					<input type="text" id="filename" placeholder="Ex: main.py" class='filenameEntry'>
 					<input type="button" id="openbt" class='btnew' value="New File" onmouseup=newfile()>
 				</div>
 				
