--- a/about.html
+++ b/about.html
@@ -23,7 +23,6 @@
 				<div class="navbar-collapse collapse" id="main-menu">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item"><a href="index.html" class="nav-link">Open</a></li>
-						<li class="nav-item"><a href="edit.html" class="nav-link">Edit</a></li>
 						<li class="nav-item selected"><a href="#" class="nav-link">About us</a></li>  
 					</ul>
 				</div>
@@ -55,8 +54,8 @@
 				<div class="textaboutsite col-sm-3 mt-sm-5" style="margin-left: auto;">
 					<h2>About the website version</h2>
 					<hr>
-					<h4>Version: 0.1 - Alpha</h4>
-					<p>Description: Create, edit and run a file using our website, from any device.</p>
+					<h4>Version: Web</h4>
+					<p>Description: Create and edit source code file using our website, from any device.</p>
 				</div>
 			</div>
 	</div>
